--- a/jugs.css
+++ b/jugs.css
@@ -1,7 +1,7 @@
 body {
-    margin-left: 200px;
-    margin-right: 200px;
-    margin-top: 50px;
+    display: flex;
+    justify-content: center;
+    align-content: center;
 }
 
 button {
