Update jugs.css, update h1 for mobile

--- a/jugs.css
+++ b/jugs.css
@@ -51,6 +51,13 @@ button {
     .pour-button {
         transform: rotate(90deg);
     }
+
+
+    h1 {
+        font-size: 1.3rem;
+        text-align: center;
+    }
+
 }
 
 h1 {
